# rag-pdf

./: .gitignore  CLAUDE.md  advanced_rag.py  cost_optimization.py  document_loaders.py  embeddings_deep.py  langsmith_setup.py  main.py  monitoring.py  pyproject.toml  rag_pipeline.py  text_splitters.py  vector_stores.py
.claude/: settings.json
chunking/: smantic_chunking.py
hybrid_search/: prod_hybrid_search.py
supabase/: 01_supabase_connection.py  02_production_example.py
